in document profiles. [David]

=item *

Container elements in document profiles are now toggled close by default when
you load a document. This keeps the display short for documents with lots of
subelements in them. [David]

=item *

Related media and/or story subelements may now be toggled to show/hide them
like any other subelements in a document. [David]

=back

=head2 Bug Fixes

=over

=item *

Fixed non-standard installation path being ignored if changed during multi 
installation mode. This was done by changing the defaults files to include
the C<BRICOLAGE_ROOT> variable. So when C<BRICOLAGE_ROOT> is changed and the
others are then evaled they get changed too. [Paul Orrock]

=item * 

Updated Admin.pod to ensure that we have at least version 1.16 of
Params::CallbackRequest so that we detect mod_perl2 correctly when running
Apache2. [Paul Orrock]

=item *

Fixed CCS bug which was preventing the jump buttons from displaying in Firefox
and Safari. [Matt Rolf]

=item *

Trying to add an element to a document that has related media fields no longer
causes an error [David]

=item *

Server errors sent in response to AJAX requests no longer send a full HTML
file in reply, just the error stuff. [David]

=item *

Eliminated redundant "Relate" column from the search results when searching
for a media document to relate. [David]

=item *

The "Un-relate" link now properly unrelates media documents. [David]

=item *

Fixed F<bric_dist_mon> so that it works when Bricolage is running on mod_perl
2. Reported by Roland van Ipenburg. [David]

=item *

Improved compatibility of the installer with certain Apache configurations
where the apreq2 module might be named differently. Reported by Roland van
Ipenburg (Bug #1359). [David]

=back

=head1 VERSION 1.11.0 (2008-04-30)

=head2 New Features

=over

=item *

Added pick-a-type dropdown to Job Manager, so you can constrain the jobs
listed to, for example, only today's job or only failed jobs. [Scott]

=item *
