@@ -31,6 +31,7 @@ CREATE TABLE story_element (
     parent_id            INTEGER,
     place                INTEGER         NOT NULL,
     object_order         INTEGER         NOT NULL,
+    displayed            BOOLEAN         NOT NULL DEFAULT FALSE,
     related_story__id    INTEGER,
     related_media__id    INTEGER,
     active               BOOLEAN         NOT NULL DEFAULT TRUE,
@@ -53,6 +54,7 @@ CREATE TABLE media_element (
     parent_id                   INTEGER,
     place                       INTEGER         NOT NULL,
     object_order                INTEGER         NOT NULL,
+    displayed                   BOOLEAN         NOT NULL DEFAULT FALSE,
     related_story__id           INTEGER, 
     related_media__id           INTEGER,
     active                      BOOLEAN         NOT NULL DEFAULT TRUE,
